--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0",
-    "sqlite": "3.0.0"
+    "discord.js": "11.4.2",
+    "request": "2.81.0"
   }
 }
